# index

./: .gitignore  LICENSE  README.md  pyproject.toml
.specs/: M1 - Fundação.md  M2 - Domínio e Parser.md  M3 - Serviços de Arquivo.md  M4 - Configuração Persistente.md  M5 - Interface Principal.md  M6 - Ações do Usuário.md  M7 - Qualidade e Fechamento MVP.md  PRD - Index.md
index_tui/: __init__.py  __main__.py
index_tui/domain/: __init__.py  models.py  parser.py
index_tui/domain/models/: __init__.py  appconfig.py  article.py
index_tui/domain/value_objects/: __init__.py  status.py
index_tui/services/: __init__.py  config_service.py  file_service.py  formatter.py  health.py  parser.py
index_tui/ui/: __init__.py  app.py  app.tcss
index_tui/ui/screens/: confirmation.py  edit_article.py  settings.py
tests/: test_bootstrap.py
tests/unit/domain/: test_formatter.py  test_parser.py
tests/unit/domain/models/: test_appconfig.py  test_article.py
tests/unit/domain/value_objects/: test_status.py
tests/unit/services/: test_config_service.py  test_file_service.py  test_formatter.py  test_parser.py
