[project]
name = "index-tui"
version = "0.1.0"
description = "Index: organizador de artigos PDF em TUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["textual>=0.62.0", "send2trash>=1.8.3"]

[project.scripts]
index = "index_tui.__main__:main"

[dependency-groups]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0", "ruff>=0.6.0", "mypy>=1.10.0"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["index_tui"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
